tf/subnets.tf
resource "aws_subnet" "private_zone1" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.0.1.0/24"
  availability_zone = local.zone1

  tags = {
    "Name"                                                         = "private-${local.zone1}"
    "kubernetes.io/role/internal-elb"                              = "1"
    "kubernetes.io/cluster/${local.env}-${local.eks-cluster-name}" = "owned"
  }
}


resource "aws_route_table_association" "private_zone1" {
  subnet_id      = aws_subnet.private_zone1.id
  route_table_id = aws_route_table.private.id
}

resource "aws_subnet" "private_zone2" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.0.2.0/24"
  availability_zone = local.zone2

  tags = {
    "Name"                                                         = "private-${local.zone2}"
    "kubernetes.io/role/internal-elb"                              = "1"
    "kubernetes.io/cluster/${local.env}-${local.eks-cluster-name}" = "owned"
  }
}

resource "aws_route_table_association" "private_zone2" {
  subnet_id      = aws_subnet.private_zone2.id
  route_table_id = aws_route_table.private.id
}

resource "aws_subnet" "public_zone1" {
  vpc_id                  = aws_vpc.main.id
  cidr_block              = "10.0.3.0/24"
  availability_zone       = local.zone1
  map_public_ip_on_launch = true

  tags = {
    "Name"                                                         = "public-${local.zone1}"
    "kubernetes.io/role/elb"                                       = "1"
    "kubernetes.io/cluster/${local.env}-${local.eks-cluster-name}" = "owned"
  }
}


resource "aws_route_table_association" "public_zone1" {
  subnet_id      = aws_subnet.public_zone1.id
  route_table_id = aws_route_table.public.id
}

resource "aws_subnet" "public_zone2" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.0.4.0/24"
  availability_zone = local.zone2

  tags = {
    "Name"                                                         = "public-${local.zone2}"
    "kubernetes.io/role/elb"                                       = "1"
    "kubernetes.io/cluster/${local.env}-${local.eks-cluster-name}" = "owned"
  }
}


resource "aws_route_table_association" "public_zone2" {
  subnet_id      = aws_subnet.public_zone2.id
  route_table_id = aws_route_table.public.id
}



resource "aws_route_table" "private" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_nat_gateway.nat.id
  }

  tags = {
    Name = "${local.env}-private"
  }
}

resource "aws_route_table" "public" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }

  tags = {
    Name = "${local.env}-public"
  }
}
